# ai-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  ai-cli.rb  ai_cli.py  generate_release_sha.sh  install.sh  pyproject.toml  requirements.txt
ai_cli/: __init__.py  api_key_manager.py  commands.py  config.py  config_manager.py  exceptions.py  main.py  openai_client.py  py.typed  system_utils.py
ai_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ai_cli/providers/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
homebrew-formula/: ai-cli.rb
tests/: __init__.py  test_api_key_manager.py  test_config.py  test_providers.py
