[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli"
version = "0.1.0"
description = "Convert natural language questions to terminal commands using OpenAI"
authors = [
    {name = "Stephen Yu"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "keyring>=24.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/stephenyu/ai-cli"
Repository = "https://github.com/stephenyu/ai-cli.git"
Issues = "https://github.com/stephenyu/ai-cli/issues"

[project.scripts]
ai = "ai_cli.main:main"

[tool.setuptools]
packages = ["ai_cli"] 