[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli"
version = "0.2.0"
description = "Convert natural language questions to terminal commands using OpenAI"
authors = [
    {name = "Stephen Yu", email = "stephen@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "keyring>=24.0.0",
]
keywords = ["cli", "ai", "openai", "terminal", "commands", "natural-language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/stephenyu/ai-cli"
Repository = "https://github.com/stephenyu/ai-cli.git"
Issues = "https://github.com/stephenyu/ai-cli/issues"
Documentation = "https://github.com/stephenyu/ai-cli#readme"
Changelog = "https://github.com/stephenyu/ai-cli/releases"

[project.scripts]
ai = "ai_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[tool.setuptools]
packages = ["ai_cli"]

[tool.setuptools.package-data]
ai_cli = ["py.typed"] 